test/errhandling/psahabu/top-try-bang.good
should not continue
top-try-bang.chpl:5: error: uncaught error
