test/errhandling/psahabu/top-try-bang.chpl
use ThrowError;

writeln("should not continue");

try! throwAnError();

writeln("fail: continued");
